--- a/app/src/main/res/layout/terapuet_setting_frag.xml
+++ b/app/src/main/res/layout/terapuet_setting_frag.xml
@@ -29,12 +29,12 @@
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/backarrow"
+        app:layout_constraintStart_toEndOf="@+id/back_patient_data"
         app:layout_constraintTop_toTopOf="parent" />
 
 
     <ImageButton
-        android:id="@+id/backarrow"
+        android:id="@+id/back_patient_data"
         android:layout_width="37dp"
         android:layout_height="44dp"
         android:layout_marginStart="8dp"
