--- a/app/src/main/res/drawable/circle_progress.xml
+++ b/app/src/main/res/drawable/circle_progress.xml
@@ -19,7 +19,7 @@
                 android:shape="ring"
                 android:thicknessRatio="16"
                 android:useLevel="true">
-                <solid android:color="@color/colorAccent" />
+                <solid android:color="@color/progress100" />
             </shape>
         </rotate>
     </item>
