--- a/app/src/main/res/layout/info_container.xml
+++ b/app/src/main/res/layout/info_container.xml
@@ -56,7 +56,7 @@
         android:layout_below="@+id/info_walking"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="12dp"
-        android:src="@drawable/stickman_standing2" />
+        android:src="@drawable/standing" />
 
     <TextView
         android:id="@+id/info_standing_text"
@@ -123,7 +123,7 @@
         android:layout_below="@+id/info_exercise"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="12dp"
-        android:src="@drawable/stickman_standing2" />
+        android:src="@drawable/others" />
 
     <TextView
         android:id="@+id/info_other_text"
