--- a/app/src/main/res/layout/patient_setting_frag.xml
+++ b/app/src/main/res/layout/patient_setting_frag.xml
@@ -52,9 +52,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="56dp"
         android:text="Din Profil"
-        android:textColor="@android:color/black"
+        android:textColor="@color/lightBlack"
         android:textSize="23sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -63,82 +63,124 @@
         android:id="@+id/column1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
         android:layout_marginTop="4dp"
-        android:background="@null"
-        android:scaleType="centerCrop"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:src="@drawable/setting_column"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
         app:layout_constraintTop_toBottomOf="@+id/profil" />
 
     <ImageView
         android:id="@+id/column2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginLeft="5dp"
-        android:background="@null"
-        android:scaleType="centerCrop"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:src="@drawable/setting_column"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/column3" />
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        app:layout_constraintTop_toBottomOf="@+id/column1" />
 
     <ImageView
         android:id="@+id/column3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="4dp"
-        android:background="@null"
-        android:scaleType="centerCrop"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:src="@drawable/setting_column"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        app:layout_constraintTop_toBottomOf="@+id/column2" />
+
+    <TextView
+        android:id="@+id/popupText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="Opdater brugeroplysninger"
+        android:textColor="@color/lightBlack"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/column2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/column1" />
+        app:layout_constraintTop_toTopOf="@+id/column1" />
+
+    <TextView
+        android:id="@+id/popupText3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="Skift sprog"
+        android:textColor="@color/lightBlack"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/column2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/column2" />
+
+    <TextView
+        android:id="@+id/popupText4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="Terapeut oplysninger"
+        android:textColor="@color/lightBlack"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/column3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/column2" />
+
+    <ImageView
+        android:id="@+id/seperator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:layout_marginLeft="48dp"
+        android:layout_marginRight="48dp"
+        android:src="@drawable/seperator_setting"
+        app:layout_constraintTop_toBottomOf="@+id/column3"/>
 
     <TextView
         android:id="@+id/notification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:text="Notifikationer"
-        android:textColor="@android:color/black"
+        android:textColor="@color/lightBlack"
         android:textSize="23sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/column2" />
+        app:layout_constraintTop_toBottomOf="@+id/seperator" />
 
     <ImageView
         android:id="@+id/column4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="4dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginLeft="5dp"
-        android:background="@null"
-        android:scaleType="centerCrop"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:src="@drawable/setting_column"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
         app:layout_constraintTop_toBottomOf="@+id/notification" />
 
     <ImageView
         android:id="@+id/column5"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginLeft="5dp"
-        android:background="@null"
-        android:scaleType="centerCrop"
+        android:layout_height="50dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:src="@drawable/setting_column"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/column4" />
@@ -151,7 +193,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="Pop-up notifikationer"
-        android:textColor="@android:color/white"
+        android:textColor="@color/lightBlack"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/column4"
         app:layout_constraintStart_toStartOf="@+id/column4"
@@ -165,21 +207,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="Lyd effekter"
-        android:textColor="@android:color/white"
+        android:textColor="@color/lightBlack"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/column5"
         app:layout_constraintStart_toStartOf="@+id/column5"
-        app:layout_constraintTop_toTopOf="@+id/column5" />
-
-    <Switch
-        android:id="@+id/switchSound"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/column5"
-        app:layout_constraintEnd_toEndOf="@+id/column5"
         app:layout_constraintTop_toTopOf="@+id/column5" />
 
     <Switch
@@ -189,69 +220,38 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
+        android:backgroundTint="@color/highlighted_switch"
         app:layout_constraintBottom_toBottomOf="@+id/column4"
         app:layout_constraintEnd_toEndOf="@+id/column4"
-        app:layout_constraintTop_toTopOf="@+id/column4"
-        app:layout_constraintVertical_bias="0.714" />
+        app:layout_constraintTop_toTopOf="@+id/column4" />
+
+    <Switch
+        android:id="@+id/switchSound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/SENScolorRed"
+        app:layout_constraintBottom_toBottomOf="@+id/column5"
+        app:layout_constraintEnd_toEndOf="@+id/column5"
+        app:layout_constraintTop_toTopOf="@+id/column5" />
+
 
     <Button
         android:id="@+id/logUd"
         android:layout_width="120dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Log ud"
-        android:textSize="18sp"
-        android:textColor="#ffffff"
         android:background="@drawable/logud_knap"
+        android:text="Log ud"
+        android:textColor="#ffffff"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/popupText4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Terapeut oplysninger"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/column2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/column3"
-        app:layout_constraintVertical_bias="0.473" />
-
-
-    <TextView
-        android:id="@+id/popupText3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Skift sprog"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/column3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/column3" />
-
-    <TextView
-        android:id="@+id/popupText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Opdater brugeroplysninger"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/column3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/column1" />
 
 
 </android.support.constraint.ConstraintLayout>
