--- a/app/src/main/res/layout/terapuet_setting_frag.xml
+++ b/app/src/main/res/layout/terapuet_setting_frag.xml
@@ -50,47 +50,46 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="56dp"
         android:text="Patient Indstillinger"
-        android:textColor="@color/darkEggwhite"
+        android:textColor="@color/lightBlack"
         android:textSize="23sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/columnT1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_marginTop="4dp"
-        android:scaleType="centerCrop"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:src="@drawable/setting_column"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
-        app:layout_constraintStart_toStartOf="parent"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
         app:layout_constraintTop_toBottomOf="@+id/editPatient" />
 
     <ImageView
         android:id="@+id/columnT2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_marginTop="4dp"
-        android:background="@null"
-        android:scaleType="centerCrop"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:src="@drawable/setting_column"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
-        app:layout_constraintStart_toStartOf="parent"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
         app:layout_constraintTop_toBottomOf="@+id/columnT1" />
 
     <TextView
         android:id="@+id/editInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="Rediger oplysninger"
-        android:textColor="#ffffff"
+        android:textColor="@color/lightBlack"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/columnT1"
         app:layout_constraintStart_toStartOf="@+id/columnT1"
@@ -100,64 +99,72 @@
         android:id="@+id/contact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="Klients kontaktinformation"
-        android:textColor="#ffffff"
+        android:textColor="@color/lightBlack"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/columnT2"
         app:layout_constraintStart_toStartOf="@+id/columnT2"
         app:layout_constraintTop_toTopOf="@+id/columnT2" />
+
+    <ImageView
+        android:id="@+id/seperator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:layout_marginLeft="48dp"
+        android:layout_marginRight="48dp"
+        android:src="@drawable/seperator_setting"
+        app:layout_constraintTop_toBottomOf="@+id/columnT2"/>
 
 
     <TextView
         android:id="@+id/sensorSettings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="Sensor Indstillinger"
-        android:textColor="@color/darkEggwhite"
+        android:textColor="@color/lightBlack"
         android:textSize="23sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/columnT2" />
+        app:layout_constraintTop_toBottomOf="@+id/seperator" />
 
     <ImageView
         android:id="@+id/columnT3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_marginTop="4dp"
-        android:background="@null"
-        android:scaleType="centerCrop"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:src="@drawable/setting_column"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
-        app:layout_constraintStart_toStartOf="parent"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
         app:layout_constraintTop_toBottomOf="@+id/sensorSettings" />
 
     <ImageView
         android:id="@+id/columnT4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@null"
-        android:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:src="@drawable/setting_column"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.557"
-        app:layout_constraintStart_toStartOf="parent"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
         app:layout_constraintTop_toBottomOf="@+id/columnT3" />
 
     <TextView
         android:id="@+id/addSensor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="Tilføj Sensor"
-        android:textColor="#ffffff"
+        android:textColor="@color/lightBlack"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/columnT3"
         app:layout_constraintStart_toStartOf="@+id/columnT3"
@@ -167,11 +174,11 @@
         android:id="@+id/editSensor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="Rediger Sensor"
-        android:textColor="#ffffff"
+        android:textColor="@color/lightBlack"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/columnT4"
         app:layout_constraintStart_toStartOf="@+id/columnT4"
@@ -181,9 +188,9 @@
         android:id="@+id/logUd"
         android:layout_width="120dp"
         android:layout_height="40dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginBottom="32dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginStart="8dp"
         android:background="@drawable/logud_knap"
         android:text="Log ud"
         android:textColor="#ffffff"
