--- a/app/src/main/res/drawable/setting_column.xml
+++ b/app/src/main/res/drawable/setting_column.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="#ffffff"
+        android:color="@color/eggInterwhite"
         />
     <size
-        android:width="350dp"
-        android:height="50dp"
+        android:width="410dp"
+        android:height="55dp"
         />
     <corners
         android:bottomLeftRadius="10dp"
@@ -13,12 +13,8 @@
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         />
-    <gradient
-        android:startColor="@color/SENScolorRed"
-        android:endColor="@color/colorDarkRed"
-        />
     <stroke
         android:width="1dp"
-        android:color="@color/lightBlack"
+        android:color="@color/eggInterwhite"
         />
 </shape>
