--- a/app/src/main/res/layout/info_container.xml
+++ b/app/src/main/res/layout/info_container.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="13dp"
-        android:layout_marginLeft="70dp"
+        android:layout_marginLeft="67dp"
         android:text="Daglige mål information"
         android:textColor="@color/lightBlack"
         android:textSize="16dp" />
@@ -47,7 +47,7 @@
         android:layout_marginRight="16dp"
         android:text="@string/info_walking"
         android:textColor="@color/lightBlack"
-        android:textSize="12dp" />
+        android:textSize="14dp" />
 
     <ImageView
         android:id="@+id/info_standing"
@@ -69,7 +69,7 @@
         android:layout_marginTop="4dp"
         android:text="@string/info_standing"
         android:textColor="@color/lightBlack"
-        android:textSize="12dp" />
+        android:textSize="14dp" />
 
     <ImageView
         android:id="@+id/info_cycling"
@@ -78,7 +78,7 @@
         android:layout_below="@+id/info_standing"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="12dp"
-        android:src="@drawable/stickman_biking" />
+        android:src="@drawable/cycling" />
 
     <TextView
         android:id="@+id/info_cycling_text"
@@ -91,7 +91,7 @@
         android:layout_marginTop="4dp"
         android:text="@string/info_cycling"
         android:textColor="@color/lightBlack"
-        android:textSize="12dp" />
+        android:textSize="14dp" />
 
 
     <ImageView
@@ -114,7 +114,7 @@
         android:layout_marginRight="16dp"
         android:text="@string/info_exercise"
         android:textColor="@color/lightBlack"
-        android:textSize="12dp" />
+        android:textSize="14dp" />
 
     <ImageView
         android:id="@+id/info_other"
@@ -136,7 +136,7 @@
         android:layout_marginTop="0dp"
         android:text="@string/info_other"
         android:textColor="@color/lightBlack"
-        android:textSize="12dp" />
+        android:textSize="14dp" />
 
     <ImageView
         android:id="@+id/seperator2"
